[Add] Creation of the ShiftMap. Used to shift parameters of anyfied methods.

--- a/asm-2016-05-26-valhalla-patch/backport-v0.1/build.xml
+++ b/asm-2016-05-26-valhalla-patch/backport-v0.1/build.xml
@@ -9,8 +9,8 @@
 	<property name="dist.dir"	value="${build.dir}/dist"/>
 
 	<property name="asm.dir"	value="../asm"/>
-	<property name="asm.name"	value="asm-5.1"/>
-	<property name="asm.jar"	value="${asm.dir}/output/dist/lib/${asm.name}.jar"/>
+	<property name="asm.name"	value="asm-debug-all-5.1"/>
+	<property name="asm.jar"	value="${asm.dir}/output/dist/lib/all/${asm.name}.jar"/>
 
 	<path id="classpath">
 		<fileset dir="${lib.dir}" includes="**/*.jar"/>
@@ -40,7 +40,7 @@
 	</target>
 
 	<target name="compile-asm">
-		<echo message="Compiling patched asm jar inside ${jar.dir}"/>
+		<echo message="Compiling patched asm jar inside ${asm.jar}"/>
 		<mkdir dir="${lib.dir}"/>
 		
 		<!-- Executing the asm ant to build a jar -->
@@ -50,7 +50,7 @@
 		<copy file="${asm.jar}" todir="${lib.dir}"/>
 		
 		<!-- Deleting asm's generations -->
-		<ant antfile="build.xml" target="clean" dir="${asm.dir}"/>
+		<!--<ant antfile="build.xml" target="clean" dir="${asm.dir}"/>-->
 	</target>
 
 
@@ -59,7 +59,7 @@
 		<antcall target="compile-asm"/>
 	</target>
 
-	<target name="compile">
+	<target name="compile" depends="clean">
 		<echo message="Compiling backport"/>
 		<antcall target="compile-asm-if-needed"/>
 
